scanner.cpp
/* Generated by re2c 0.16 */
//-----------------------------------------------------------------------------
// z80asm scanner
// Copyright (c) Paulo Custodio, 2015-2016
// License: http://www.perlfoundation.org/artistic_license_2_0
//-----------------------------------------------------------------------------

#include "memcheck.h"
#include "scanner.h"
#include "message.h"
#include "source.h"
#include <cassert>
#include <cstdlib>
#include <climits>

Token Scanner::eoi_token = Token(TK_EOI);
SrcLine Scanner::default_line = SrcLine(NULL, 0, "");

Scanner::Scanner()
	: line_(NULL), p_(NULL), marker_(NULL), ctxmarker_(NULL)
	, tok_p_(0) {
	init(&default_line);
}

Scanner::~Scanner() {
}

void Scanner::init(SrcLine* line) {
	line_ = line;
	p_ = line->text().c_str();
	marker_ = ctxmarker_ = NULL;
	tokens_.clear();
	tok_p_ = 0;
}

Token* Scanner::peek(int n) {
	assert(n >= 0);

	// fill buffer
	while (tok_p_ + n >= tokens_.size()) {
		if (!push_next())
			return &eoi_token;
	}

	return &tokens_[tok_p_ + n];
}

Token* Scanner::next() {
	Token* tok = peek();
	if (tok_p_ < tokens_.size())
		++tok_p_;
	return tok;
}

int Scanner::get_pos() const {
	return tok_p_;
}

void Scanner::set_pos(int pos) {
	assert(pos >= 0);
	assert(pos <= static_cast<int>(tokens_.size()));
	tok_p_ = pos;
}

bool Scanner::eoi() {
	return peek()->id() == TK_EOI;
}

int Scanner::column() {
	if (line_ == NULL)
		return  0;

	const char* next_p = NULL;
	if (tok_p_ < tokens_.size())
		next_p = tokens_[tok_p_].ts();

	if (next_p == NULL) {
		skip_space();
		next_p = p_;
	}

	return next_p - line_->text().c_str() + 1;
}

void Scanner::error(void(*errfunc)(SrcLine*, int)) {
	errfunc(line_, column());
	flush();
}

void Scanner::warning(void(*errfunc)(SrcLine*, int)) {
	errfunc(line_, column());
}

int Scanner::number(const char* ts, int base) {
	unsigned long value = std::strtoul(ts, NULL, base);
	return static_cast<int>(value);
}



void Scanner::skip_space() {
	for (;;) {
		
		{
			char yych;
			yych = *p_;
			switch (yych) {
			case '\t':
			case '\v':
			case '\f':
			case '\r':
			case ' ':	goto yy4;
			default:	goto yy2;
			}
yy2:
			++p_;
			{ --p_; return; }
yy4:
			++p_;
			{ continue; }
		}

	}
}

void Scanner::flush() {
	for (;;) {
		
		{
			char yych;
			yych = *p_;
			switch (yych) {
			case 0x00:	goto yy8;
			case '\n':	goto yy12;
			default:	goto yy10;
			}
yy8:
			++p_;
			{ --p_; return; }
yy10:
			++p_;
			{ continue; }
yy12:
			++p_;
			{ return; }
		}

	}
}

bool Scanner::scan_filename() {
	const char* ts;

	text_.clear();
	for (;;) {
		
		{
			char yych;
			yych = *p_;
			switch (yych) {
			case 0x00:
			case '\n':
			case ';':	goto yy16;
			case '\t':
			case '\v':
			case '\f':
			case '\r':
			case ' ':	goto yy20;
			case '"':	goto yy22;
			case '\'':	goto yy24;
			case '<':	goto yy26;
			default:	goto yy18;
			}
yy16:
			++p_;
			{ p_--; goto end; }
yy18:
			++p_;
			{ ts = p_-1; goto word; }
yy20:
			++p_;
			{ continue; }
yy22:
			++p_;
			{ ts = p_; goto dquote; }
yy24:
			++p_;
			{ ts = p_; goto squote; }
yy26:
			++p_;
			{ ts = p_; goto angles; }
		}

	}
	assert(0);				// not reached

word:
	for (;;) {
		
		{
			char yych;
			yych = *p_;
			switch (yych) {
			case 0x00:
			case '\t':
			case '\n':
			case '\v':
			case '\f':
			case '\r':
			case ' ':
			case ';':	goto yy30;
			default:	goto yy32;
			}
yy30:
			++p_;
			{ p_--; text_ = std::string(ts, p_); goto end; }
yy32:
			++p_;
			{ continue; }
		}

	}
	assert(0);				// not reached

angles:
	for (;;) {
		
		{
			char yych;
			yych = *p_;
			switch (yych) {
			case 0x00:
			case '\n':	goto yy36;
			case '>':	goto yy40;
			default:	goto yy38;
			}
yy36:
			++p_;
			{ --p_; error(err::missing_closing_bracket); return false; }
yy38:
			++p_;
			{ continue; }
yy40:
			++p_;
			{ text_ = std::string(ts, p_-1); goto end; }
		}

	}
	assert(0);				// not reached

dquote:
	for (;;) {
		
		{
			char yych;
			yych = *p_;
			switch (yych) {
			case 0x00:
			case '\n':	goto yy44;
			case '"':	goto yy48;
			default:	goto yy46;
			}
yy44:
			++p_;
			{ --p_; error(err::missing_closing_quote); return false; }
yy46:
			++p_;
			{ continue; }
yy48:
			++p_;
			{ text_ = std::string(ts, p_-1); goto end; }
		}

	}
	assert(0);				// not reached

squote:
	for (;;) {
		
		{
			char yych;
			yych = *p_;
			switch (yych) {
			case 0x00:
			case '\n':	goto yy52;
			case '\'':	goto yy56;
			default:	goto yy54;
			}
yy52:
			++p_;
			{ --p_; error(err::missing_closing_quote); return false; }
yy54:
			++p_;
			{ continue; }
yy56:
			++p_;
			{ text_ = std::string(ts, p_-1); goto end; }
		}

	}
	assert(0);				// not reached

end:
	if (text_.empty()) {
		error(err::expected_file);
		return false;
	}
	else {
		return true;
	}
}

bool Scanner::scan_eos() {
	for (;;) {
		
		{
			char yych;
			yych = *p_;
			switch (yych) {
			case 0x00:	goto yy60;
			case '\t':
			case '\v':
			case '\f':
			case '\r':
			case ' ':	goto yy64;
			case '\n':
			case '\\':	goto yy66;
			case ';':	goto yy68;
			default:	goto yy62;
			}
yy60:
			++p_;
			{ --p_; return true; }
yy62:
			++p_;
			{ --p_; error(err::expected_eos); return false; }
yy64:
			++p_;
			{ continue; }
yy66:
			++p_;
			{ return true; }
yy68:
			++p_;
			{ flush(); return true; }
		}

	}
}

#define PUSH(id_) 				tokens_.push_back(Token(id_, 0, ts)); return true;
#define PUSH_VAL(id_, val_)		tokens_.push_back(Token(id_, val_, ts)); return true;
#define PUSH_TXT(id_) 			tokens_.push_back(Token(id_, 0, ts, p_)); return true;
#define PUSH_NUM(off_,base_)	tokens_.push_back(Token(TK_NUMBER, number(ts + off_, base_), ts)); return true;

bool Scanner::push_next() {
	const char* ts;

	for (;;) {
		ts = p_;
		
		{
			char yych;
			unsigned int yyaccept = 0;
			yych = *p_;
			switch (yych) {
			case 0x00:	goto yy72;
			case '\t':
			case '\v':
			case '\f':
			case '\r':
			case ' ':	goto yy76;
			case '\n':
			case '\\':	goto yy78;
			case '!':	goto yy80;
			case '"':	goto yy82;
			case '#':	goto yy84;
			case '$':	goto yy86;
			case '%':	goto yy88;
			case '&':	goto yy90;
			case '\'':	goto yy92;
			case '(':	goto yy94;
			case ')':	goto yy96;
			case '*':	goto yy98;
			case '+':	goto yy100;
			case ',':	goto yy102;
			case '-':	goto yy104;
			case '.':	goto yy106;
			case '/':	goto yy108;
			case '0':	goto yy110;
			case '1':	goto yy112;
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':	goto yy114;
			case '8':
			case '9':	goto yy116;
			case ':':	goto yy118;
			case ';':	goto yy120;
			case '<':	goto yy122;
			case '=':	goto yy124;
			case '>':	goto yy126;
			case '?':	goto yy128;
			case '@':	goto yy130;
			case 'A':
			case 'a':	goto yy131;
			case 'B':
			case 'b':	goto yy133;
			case 'C':
			case 'c':	goto yy134;
			case 'D':
			case 'd':	goto yy135;
			case 'E':
			case 'e':	goto yy136;
			case 'F':
			case 'f':	goto yy137;
			case 'G':
			case 'g':	goto yy138;
			case 'H':
			case 'h':	goto yy139;
			case 'I':
			case 'i':	goto yy140;
			case 'J':
			case 'j':	goto yy141;
			case 'K':
			case 'Q':
			case 'V':
			case 'W':
			case 'Y':
			case '_':
			case 'k':
			case 'q':
			case 'v':
			case 'w':
			case 'y':	goto yy142;
			case 'L':
			case 'l':	goto yy144;
			case 'M':
			case 'm':	goto yy145;
			case 'N':
			case 'n':	goto yy146;
			case 'O':
			case 'o':	goto yy147;
			case 'P':
			case 'p':	goto yy148;
			case 'R':
			case 'r':	goto yy149;
			case 'S':
			case 's':	goto yy150;
			case 'T':
			case 't':	goto yy151;
			case 'U':
			case 'u':	goto yy152;
			case 'X':
			case 'x':	goto yy153;
			case 'Z':
			case 'z':	goto yy154;
			case '[':	goto yy155;
			case ']':	goto yy157;
			case '^':	goto yy159;
			case '{':	goto yy161;
			case '|':	goto yy163;
			case '}':	goto yy165;
			case '~':	goto yy167;
			default:	goto yy74;
			}
yy72:
			++p_;
			{ --p_; return false; }
yy74:
			++p_;
yy75:
			{ --p_; error(err::syntax); return false; }
yy76:
			++p_;
			{ continue; }
yy78:
			++p_;
			{ PUSH(TK_ENDL); }
yy80:
			++p_;
			switch ((yych = *p_)) {
			case '=':	goto yy169;
			default:	goto yy81;
			}
yy81:
			{ PUSH(TK_EXCLAM); }
yy82:
			++p_;
			{ text_.clear(); goto dquote; }
yy84:
			++p_;
			switch ((yych = *p_)) {
			case '#':	goto yy171;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':	goto yy173;
			default:	goto yy85;
			}
yy85:
			{ PUSH(TK_HASH); }
yy86:
			++p_;
			switch ((yych = *p_)) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':	goto yy173;
			default:	goto yy87;
			}
yy87:
			{ PUSH(TK_ASMPC); }
yy88:
			++p_;
			switch ((yych = *p_)) {
			case '0':
			case '1':	goto yy176;
			default:	goto yy89;
			}
yy89:
			{ PUSH(TK_PERCENT); }
yy90:
			yyaccept = 0;
			yych = *(marker_ = ++p_);
			switch (yych) {
			case '&':	goto yy179;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'a':
			case 'c':
			case 'd':
			case 'e':
			case 'f':	goto yy181;
			case 'B':
			case 'b':	goto yy184;
			case 'H':
			case 'h':	goto yy185;
			case 'O':
			case 'o':	goto yy187;
			case 'Q':
			case 'q':	goto yy188;
			case 'X':
			case 'x':	goto yy189;
			default:	goto yy91;
			}
yy91:
			{ PUSH(TK_AMPERSHAND); }
yy92:
			++p_;
			{ text_.clear(); goto squote; }
yy94:
			++p_;
			{ PUSH(TK_LPAREN); }
yy96:
			++p_;
			{ PUSH(TK_RPAREN); }
yy98:
			++p_;
			switch ((yych = *p_)) {
			case '*':	goto yy190;
			default:	goto yy99;
			}
yy99:
			{ PUSH(TK_STAR); }
yy100:
			++p_;
			switch ((yych = *p_)) {
			case '+':	goto yy192;
			default:	goto yy101;
			}
yy101:
			{ PUSH(TK_PLUS); }
yy102:
			++p_;
			{ PUSH(TK_COMMA); }
yy104:
			++p_;
			switch ((yych = *p_)) {
			case '-':	goto yy194;
			default:	goto yy105;
			}
yy105:
			{ PUSH(TK_MINUS); }
yy106:
			++p_;
			{ PUSH(TK_DOT); }
yy108:
			++p_;
			{ PUSH(TK_SLASH); }
yy110:
			yyaccept = 1;
			yych = *(marker_ = ++p_);
			switch (yych) {
			case 'B':
			case 'b':	goto yy198;
			case 'O':
			case 'o':	goto yy203;
			case 'Q':
			case 'q':	goto yy205;
			case 'X':
			case 'x':	goto yy207;
			default:	goto yy113;
			}
yy111:
			{ PUSH_NUM(0, 10); }
yy112:
			yyaccept = 1;
			marker_ = ++p_;
			yych = *p_;
yy113:
			switch (yych) {
			case '0':
			case '1':	goto yy112;
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':	goto yy114;
			case '8':
			case '9':	goto yy116;
			case 'A':
			case 'C':
			case 'E':
			case 'F':
			case 'a':
			case 'c':
			case 'e':
			case 'f':	goto yy196;
			case 'B':
			case 'b':	goto yy208;
			case 'D':
			case 'd':	goto yy200;
			case 'H':
			case 'h':	goto yy201;
			case 'O':
			case 'o':	goto yy209;
			case 'Q':
			case 'q':	goto yy210;
			default:	goto yy111;
			}
yy114:
			yyaccept = 1;
			marker_ = ++p_;
			yych = *p_;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':	goto yy114;
			case '8':
			case '9':	goto yy116;
			case 'A':
			case 'B':
			case 'C':
			case 'E':
			case 'F':
			case 'a':
			case 'b':
			case 'c':
			case 'e':
			case 'f':	goto yy196;
			case 'D':
			case 'd':	goto yy200;
			case 'H':
			case 'h':	goto yy201;
			case 'O':
			case 'o':	goto yy209;
			case 'Q':
			case 'q':	goto yy210;
			default:	goto yy111;
			}
yy116:
			yyaccept = 1;
			marker_ = ++p_;
			yych = *p_;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy116;
			case 'A':
			case 'B':
			case 'C':
			case 'E':
			case 'F':
			case 'a':
			case 'b':
			case 'c':
			case 'e':
			case 'f':	goto yy196;
			case 'D':
			case 'd':	goto yy200;
			case 'H':
			case 'h':	goto yy201;
			default:	goto yy111;
			}
yy118:
			++p_;
			{ PUSH(TK_COLON); }
yy120:
			++p_;
			{ flush(); PUSH(TK_ENDL); }
yy122:
			++p_;
			switch ((yych = *p_)) {
			case '<':	goto yy211;
			case '=':	goto yy213;
			case '>':	goto yy169;
			default:	goto yy123;
			}
yy123:
			{ PUSH(TK_LESS); }
yy124:
			++p_;
			switch ((yych = *p_)) {
			case '=':	goto yy215;
			default:	goto yy125;
			}
yy125:
			{ PUSH(TK_EQUAL); }
yy126:
			++p_;
			switch ((yych = *p_)) {
			case '=':	goto yy217;
			case '>':	goto yy219;
			default:	goto yy127;
			}
yy127:
			{ PUSH(TK_GREATER); }
yy128:
			++p_;
			{ PUSH(TK_QUESTION); }
yy130:
			yych = *++p_;
			switch (yych) {
			case '0':
			case '1':	goto yy176;
			default:	goto yy75;
			}
yy131:
			++p_;
			ctxmarker_ = p_;
			switch ((yych = *p_)) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'E':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'e':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy142;
			case 'D':
			case 'd':	goto yy223;
			case 'F':
			case 'f':	goto yy224;
			case 'N':
			case 'n':	goto yy225;
			case 'S':
			case 's':	goto yy226;
			default:	goto yy221;
			}
yy132:
			{ PUSH_TXT(TK_IDENT); }
yy133:
			yych = *++p_;
			ctxmarker_ = p_;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy142;
			case 'C':
			case 'c':	goto yy229;
			case 'I':
			case 'i':	goto yy230;
			default:	goto yy227;
			}
yy134:
			yych = *++p_;
			ctxmarker_ = p_;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'B':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'b':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy142;
			case 'A':
			case 'a':	goto yy233;
			case 'C':
			case 'c':	goto yy234;
			case 'P':
			case 'p':	goto yy235;
			default:	goto yy231;
			}
yy135:
			yych = *++p_;
			ctxmarker_ = p_;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'B':
			case 'C':
			case 'D':
			case 'F':
			case 'G':
			case 'H':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'b':
			case 'c':
			case 'd':
			case 'f':
			case 'g':
			case 'h':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy142;
			case 'A':
			case 'a':	goto yy238;
			case 'E':
			case 'e':	goto yy239;
			case 'I':
			case 'i':	goto yy240;
			case 'J':
			case 'j':	goto yy241;
			default:	goto yy236;
			}
yy136:
			yych = *++p_;
			ctxmarker_ = p_;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'J':
			case 'K':
			case 'M':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'j':
			case 'k':
			case 'm':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'y':
			case 'z':	goto yy142;
			case 'I':
			case 'i':	goto yy244;
			case 'L':
			case 'l':	goto yy245;
			case 'N':
			case 'n':	goto yy246;
			case 'X':
			case 'x':	goto yy247;
			default:	goto yy242;
			}
yy137:
			yych = *++p_;
			ctxmarker_ = p_;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy142;
			default:	goto yy248;
			}
yy138:
			yych = *++p_;
			switch (yych) {
			case 'L':
			case 'l':	goto yy250;
			default:	goto yy143;
			}
yy139:
			yych = *++p_;
			ctxmarker_ = p_;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy142;
			case 'A':
			case 'a':	goto yy253;
			case 'L':
			case 'l':	goto yy254;
			default:	goto yy251;
			}
yy140:
			yych = *++p_;
			ctxmarker_ = p_;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'z':	goto yy142;
			case 'F':
			case 'f':	goto yy257;
			case 'M':
			case 'm':	goto yy258;
			case 'N':
			case 'n':	goto yy259;
			case 'X':
			case 'x':	goto yy260;
			case 'Y':
			case 'y':	goto yy261;
			default:	goto yy255;
			}
yy141:
			yych = *++p_;
			switch (yych) {
			case 'P':
			case 'p':	goto yy262;
			case 'R':
			case 'r':	goto yy263;
			default:	goto yy143;
			}
yy142:
			++p_;
			yych = *p_;
yy143:
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy142;
			default:	goto yy132;
			}
yy144:
			yych = *++p_;
			ctxmarker_ = p_;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy142;
			case 'D':
			case 'd':	goto yy266;
			case 'I':
			case 'i':	goto yy267;
			case 'S':
			case 's':	goto yy268;
			default:	goto yy264;
			}
yy145:
			yych = *++p_;
			ctxmarker_ = p_;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'M':
			case 'N':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'm':
			case 'n':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy142;
			case 'L':
			case 'l':	goto yy271;
			case 'O':
			case 'o':	goto yy272;
			default:	goto yy269;
			}
yy146:
			yych = *++p_;
			switch (yych) {
			case 'C':
			case 'c':	goto yy273;
			case 'E':
			case 'e':	goto yy274;
			case 'O':
			case 'o':	goto yy275;
			case 'Z':
			case 'z':	goto yy276;
			default:	goto yy143;
			}
yy147:
			yych = *++p_;
			switch (yych) {
			case 'R':
			case 'r':	goto yy277;
			case 'T':
			case 't':	goto yy278;
			case 'U':
			case 'u':	goto yy279;
			default:	goto yy143;
			}
yy148:
			yych = *++p_;
			ctxmarker_ = p_;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
